# mrmat-repo-util

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml
src/ci/: __init__.py
src/mru/: __init__.py  cli.py  social.py
test/: conftest.py  test_social.py
